--- a/flowers.kh/css/main.css
+++ b/flowers.kh/css/main.css
@@ -128,7 +128,7 @@ font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 #s_1{
     height: 100vh;
     width: 100%;
-    background-image: url(/img/img_13.jpg);
+    background-image: url(img/fon.jpg);
     background-size: cover;
     display: table;
     background-attachment: fixed;
@@ -154,7 +154,7 @@ font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-attachment: fixed;
 } */
 #s_5{
-    background-image: url(/img/img_13.jpg);
+    background-image: url(/img/fon.jpg);
     background-size: cover;
     height: 100vh;
     width: 100%;
