--- a/flowers.kh/css/main.css
+++ b/flowers.kh/css/main.css
@@ -128,7 +128,7 @@ font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 #s_1{
     height: 100vh;
     width: 100%;
-    background: url(img/fon.jpg);
+    background: url(/flowers.kh/img/fon.jpg);
     background-size: cover;
     display: table;
     background-attachment: fixed;
