--- a/flowers.kh/css/media.css
+++ b/flowers.kh/css/media.css
@@ -5,6 +5,27 @@
 
 }
 @media (max-width : 768px) {
+	/*Disable Animation on Mobile Devices*/
+	.animated {
+		/*CSS transitions*/
+		-o-transition-property: none !important;
+		-moz-transition-property: none !important;
+		-ms-transition-property: none !important;
+		-webkit-transition-property: none !important;
+		transition-property: none !important;
+		/*CSS transforms*/
+		-o-transform: none !important;
+		-moz-transform: none !important;
+		-ms-transform: none !important;
+		-webkit-transform: none !important;
+		transform: none !important;
+		/*CSS animations*/
+		-webkit-animation: none !important;
+		-moz-animation: none !important;
+		-o-animation: none !important;
+		-ms-animation: none !important;
+		animation: none !important;
+	}
 	.div-info{
 		margin-top: 10px;
 	}
@@ -17,6 +38,8 @@
 	.div-form{
 		margin-top: 20px;
 	}
+	.section-class-image img{
+		max-width: 400px;}
 }
 @media (max-width : 480px) {
 .div-info{
@@ -48,7 +71,7 @@
 		  display: none; }
 		.section-class-item .item-text,
 		.section-class-item .item-icon {
-		  display: block;
+		  display: table-cell;
 		  vertical-align: top; }
 		.section-class-item h3 {
 		  margin-top: 0;
@@ -68,12 +91,71 @@
 	  
 	  .items-left .item-icon {
 		padding-right: 0px; }
+	.section-class-image img{
+			max-width: 300px;}
+	.contact li{
+				font-size: 10px;
+				list-style-type: none;}
+	.footer-div{
+				background: black;}
+			}
+
+
+@media (max-width : 320px) {
+	.div-info{
+			 margin-top: 10px;
+		 }
+	.div-info h2{
+			 font-size: 20px;
+		 }
+	.div-info p{
+			 font-size: 15px;
+		 }
+	.div-form{
+			 margin-top: 20px;
+		 }
+		 .items-right .item-icon {
+			padding-left: 0px; }
+			.section-class-item {
+			margin-bottom: 30px; }
+			.section-class-item .icon-wrap {
+				width: 70px;
+				height: 70px;
+				line-height: 0px;
+				text-align: center;
+				display: inline-block;
+				border-radius: 10em;
+				font-size: 20px;
+				color: white;
+				display: none; }
+			.section-class-item .item-text,
+			.section-class-item .item-icon {
+				display: table-cell;
+				vertical-align:top; }
+			.section-class-item h3 {
+				margin-top: 0;
+				font-size: 18px;
+				font-weight: bold; }
+			.section-class-item p {
+				color: 6f6f6f; }
+			.text-right{
+				text-align: left;
+			}
+			.items-right,
+			.items-left {
+			margin-top: 30px; }
+			
+			.items-right .item-icon {
+			padding-left: 0px; }
+			
+			.items-left .item-icon {
+			padding-right: 0px; }
+		.section-class-image img{
+			max-width: 300px;}
+			.footer-div{
+				background: black;}
+		.contact li{
+			font-size: 10px;
+			list-style-type: none;}
+		}
 	
-}
-.footer-div{
-	background: black;
-}
-
-@media only screen and (max-width : 320px) {
-
-}
