--- a/delpost.kh/style/delpost.css
+++ b/delpost.kh/style/delpost.css
@@ -199,7 +199,7 @@ margin-top: 50px;
     color: black;
 }
 .bg-map{
-    background: url(picture/bg-map.jpg);
+    background: url(/delpost.kh/picture/bg-map.jpg);
     background-size: cover;
     
 }
