--- a/go-business.kh/css/main.css
+++ b/go-business.kh/css/main.css
@@ -20,7 +20,11 @@ body{
     text-decoration: none;
     text-transform: uppercase;
     color: #fff;
-    padding-right: 30px;
+    margin-right: 30px;
+}
+.menu a:hover{
+    border-bottom: 2px solid #fff;
+    
 }
 .banner-text{
     text-align: center;
@@ -31,10 +35,16 @@ body{
     font-weight: bold;
     margin-top: 35vh;
     margin-bottom: 50px;
+    font-family: 'Montserrat', sans-serif;
+
 }
 .banner-text a{
     text-decoration: none;
     color: #fff;
+    font-family: 'Montserrat', sans-serif;
+}
+.banner-text a:hover{
+    border-bottom: 2px solid#fff;
 }
 .bg-service{
     background: #efefef;
@@ -56,7 +66,7 @@ body{
     margin-bottom: 100px;
 }
 .block-service{
-    height: 280px;
+    
     background: #fff;
     text-align: center;
     padding: 20px;
@@ -76,13 +86,7 @@ body{
     font-family: 'Montserrat', sans-serif;
     padding-top: 10px;
 }
-.block-service:hover{
-    -webkit-box-shadow: 0px 11px 22px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 11px 22px 0px rgba(0,0,0,0.75);
-    box-shadow: 0px 11px 22px 0px rgba(0,0,0,0.75);
-    cursor: pointer;
-    transition: 1s;
-}
+
 .bg-portfolio{
     background: #f8f8f8;
   
@@ -256,8 +260,16 @@ margin: auto;
     border-radius: 50%;
     border: 3px solid #26af5f;
 }
-.owl-carousel p{
-      padding: 50px 200px 50px 200px;
+.picture-text{
+    max-width: 500px;
+    margin: auto;
+    padding: 10px;
+
+}
+.picture-text p{
+    font-family: 'Montserrat', sans-serif;
+    
+    
 }
 .picture-face-1{
     background: url(/img/team-2.png);
@@ -357,6 +369,7 @@ margin: auto;
     border-bottom: 2px solid #fff;
     background: none;
     margin-bottom: 50px;
+    color: #fff;
 
 }
 
@@ -447,9 +460,10 @@ margin: auto;
 }
 .info-contact p{
     font-family: 'Montserrat', sans-serif;
-    padding: 30px 100px 20px 100px;
+    padding-top: 50px;
     opacity: 0.7;
     font-size: 19px;
+    text-align: center;
 }
 .info-contact span{
     color: #26af5f;
@@ -459,6 +473,7 @@ margin: auto;
 .footer-logo{
     text-align: center;
     padding: 100px;
+    margin: auto;
 }
 .footer-logo li{
     display: inline-block;
