--- a/go-business.kh/css/main.css
+++ b/go-business.kh/css/main.css
@@ -54,7 +54,7 @@ body{
     font-family: Arial;
     font-size: 14px;
     line-height: 30px;
-    padding: 0 10px;
+    padding: 0 20px;
     text-transform: uppercase;
     text-decoration: none;
     font-family: 'Montserrat', sans-serif;
@@ -62,6 +62,7 @@ body{
 
 .menu__links-item:hover {
     text-decoration: underline;
+    color: #fff;
 
 }
 
